# Rust_app

./: package-lock.json  package.json
Airtel-20260617T054917Z-3-001/Airtel/: 01625763675.csv  8801613527618.xlsx  CDR 8801647532830.csv  CDR_8801610138172_2022_12_27_20_6_45.xlsx
src/: App.tsx
src-tauri/: 2  Cargo.toml  auth_app.db  tauri.conf.json  update.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_users.sql
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: analysis_history.rs  auth.rs  cdr_analysis.rs  credits.rs  db.rs  export.rs  files.rs  mod.rs
src-tauri/src/models/: cdr.rs  file_record.rs  mod.rs  user.rs
src/components/: AnalyzedFiles.tsx  CdrAnalyzer.tsx  ContactExtractor.tsx  CreditShop.tsx  Dashboard.tsx  FileManager.tsx  FilePreview.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  ThemeToggle.tsx  UpdateBanner.tsx
src/context/: ThemeContext.tsx
src/hooks/: useUpdater.ts
src/styles/: global.css
src/types/: cdr.ts
src/utils/: contactExtractor.ts  exportReport.ts
~/.tauri/: myapp.key  myapp.key.pub
